cockroachlabs-preview-main/docs/v23.2/show-virtual-cluster.mdx
---
title: "SHOW VIRTUAL CLUSTER"
old_description: "The SHOW VIRTUAL CLUSTER statement provides details about virtual clusters and physical replication streams."
---

import { InlineImage } from "/snippets/InlineImage.jsx";
import { ShowVirtualCluster } from "/snippets/syntax-diagrams/ShowVirtualCluster.jsx";

<Note>
**This feature is in [preview](/docs/v23.2/cockroachdb-feature-availability)** and subject to change. To share feedback and/or issues, contact [Support](https://support.cockroachlabs.com/hc/en-us).
</Note>

<InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v23.2: The `SHOW VIRTUAL CLUSTER` statement lists all virtual clusters running in a CockroachDB cluster. `SHOW VIRTUAL CLUSTER` supports inspecting virtual cluster status only as part of the [**physical cluster replication (PCR)**](/docs/v23.2/physical-cluster-replication-overview) workflow.

PCR happens between an *active* primary cluster and a *passive* standby cluster that accepts updates from the primary cluster. The unit of replication is a *virtual cluster*, which is part of the underlying infrastructure in the primary and standby clusters. The CockroachDB cluster has:

- The system virtual cluster manages the cluster's control plane and the replication of the cluster's data. Admins connect to the system virtual cluster to configure and manage the underlying CockroachDB cluster, set up PCR, create and manage a virtual cluster, and observe metrics and logs for the CockroachDB cluster and each virtual cluster.
- Each other virtual cluster manages its own data plane. Users connect to a virtual cluster by default, rather than the system virtual cluster. To connect to the system virtual cluster, the connection string must be modified. Virtual clusters contain user data and run application workloads. When PCR is enabled, the non-system virtual cluster on both primary and secondary clusters is named `application`.

For more detail, refer to the [Physical Cluster Replication Overview](/docs/v23.2/physical-cluster-replication-overview).

## Required privileges

`SHOW VIRTUAL CLUSTER` requires either:

- The `admin` role.
- The `MANAGEVIRTUALCLUSTER` [system privilege](/docs/v23.2/security-reference/authorization#privileges).

Use the [`GRANT SYSTEM`](/docs/v23.2/grant) statement:

```sql
GRANT SYSTEM MANAGEVIRTUALCLUSTER TO user;
```

## Synopsis

xml version="1.0" encoding="UTF-8"?

<ShowVirtualCluster />

## Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>virtual&#95;cluster&#95;spec</code></td><td>The name of the virtual cluster.</td></tr><tr><td><code>REPLICATION STATUS</code></td><td>Display the details of a replication stream.</td></tr><tr><td><code>CAPABILITIES</code></td><td>Display the <a href="/docs/v23.2/create-virtual-cluster#capabilities">capabilities</a> of a virtual cluster.</td></tr></tbody></table>

## Responses

This table lists all possible responses from the different `SHOW VIRTUAL CLUSTER` statements:

<table><thead><tr><th>Field</th><th>Response</th></tr></thead><tbody><tr><td><code>id</code></td><td>The ID of a virtual cluster.</td></tr><tr><td><code>name</code></td><td>The name of the standby (destination) virtual cluster.</td></tr><tr><td><code>data&#95;state</code></td><td>The state of the data on a virtual cluster. This can show one of the following: <code>initializing replication</code>, <code>ready</code>, <code>replicating</code>, <code>replication paused</code>, <code>replication pending cutover</code>, <code>replication cutting over</code>, <code>replication error</code>. Refer to <a href="#data-state">Data state</a> for more detail on each response.</td></tr><tr><td><code>service&#95;mode</code></td><td>The service mode shows whether a virtual cluster is ready to accept SQL requests. This can show one <code>none</code> or <code>shared</code>. When <code>shared</code>, a virtual cluster's SQL connections will be served by the same nodes that are serving the system virtual cluster.</td></tr><tr><td><code>source&#95;tenant&#95;name</code></td><td>The name of the primary (source) virtual cluster.</td></tr><tr><td><code>source&#95;cluster&#95;uri</code></td><td>The URI of the primary (source) cluster. The standby cluster connects to the primary cluster using this URI when <a href="/docs/v23.2/set-up-physical-cluster-replication#step-4-start-replication">starting a replication stream</a>.</td></tr><tr><td><code>replication&#95;job&#95;id</code></td><td>The ID of the replication job.</td></tr><tr><td><code>replicated&#95;time</code></td><td>The latest timestamp at which the standby cluser has consistent data — that is, the latest time you can cut over to. This time advances automatically as long as the replication proceeds without error. <code>replicated&#95;time</code> is updated periodically (every <code>30s</code>).</td></tr><tr><td><code>retained&#95;time</code></td><td>The earliest timestamp at which the standby cluster has consistent data — that is, the earliest time you can cut over to.</td></tr><tr><td><code>cutover&#95;time</code></td><td>The time at which the cutover will begin. This can be in the past or the future. Refer to <a href="/docs/v23.2/cutover-replication#cut-over-to-a-point-in-time">Cut over to a point in time</a>.</td></tr><tr><td><code>capability&#95;name</code></td><td>The <a href="/docs/v23.2/create-virtual-cluster#capabilities">capability</a> name.</td></tr><tr><td><code>capability&#95;value</code></td><td>Whether the <a href="/docs/v23.2/create-virtual-cluster#capabilities">capability</a> is enabled for a virtual cluster.</td></tr></tbody></table>

### Data state

<table><thead><tr><th>State</th><th>Description</th></tr></thead><tbody><tr><td><code>initializing replication</code></td><td>The replication job is completing the initial scan of data from the primary cluster before it starts replicating data in real time.</td></tr><tr><td><code>ready</code></td><td>A virtual cluster's data is ready for use.</td></tr><tr><td><code>replicating</code></td><td>The replication job has started and is replicating data.</td></tr><tr><td><code>replication paused</code></td><td>The replication job is paused due to an error or a manual request with <a href="/docs/v23.2/alter-virtual-cluster"><code>ALTER VIRTUAL CLUSTER ... PAUSE REPLICATION</code></a>.</td></tr><tr><td><code>replication pending cutover</code></td><td>The replication job is running and the cutover time has been set. Once the the replication reaches the cutover time, the cutover will begin automatically.</td></tr><tr><td><code>replication cutting over</code></td><td>The job has started cutting over. The cutover time can no longer be changed. Once cutover is complete, A virtual cluster will be available for use with <a href="/docs/v23.2/alter-virtual-cluster"><code>ALTER VIRTUAL CLUSTER ... START SERVICE SHARED</code></a>.</td></tr><tr><td><code>replication error</code></td><td>An error has occurred. You can find more detail in the error message and the <a href="/docs/v23.2/configure-logs">logs</a>. <strong>Note:</strong> A PCR job will retry for 3 minutes before failing.</td></tr></tbody></table>

## Examples

### Show all virtual clusters

List all virtual clusters:

```sql
SHOW VIRTUAL CLUSTERS;
```

### Show a virtual cluster

To show more details about the `application` virtual cluster:

```sql
SHOW VIRTUAL CLUSTER application;
```

```text
  id |     name           | data_state  | service_mode | source_tenant_name |                                                  source_cluster_uri                                                   | replication_job_id |       replicated_time        |         retained_time         | cutover_time
-----+--------------------+-------------+--------------+--------------------+-----------------------------------------------------------------------------------------------------------------------+--------------------+------------------------------+-------------------------------+---------------
   5 | application        | replicating | none         | application        | postgresql://user:redacted@host?options=-ccluster%3Dsystem&sslmode=verify-full&sslrootcert=redacted | 911803003607220225 | 2023-10-26 17:36:52.27978+00 | 2023-10-26 14:36:52.279781+00 |         NULL
```

### Show replication status

To show the replication status of all virtual clusters:

```sql
SHOW VIRTUAL CLUSTERS WITH REPLICATION STATUS;
```

To show the replication status of the `application` virtual cluster:

```sql
SHOW VIRTUAL CLUSTER application WITH REPLICATION STATUS;
```

## See also

- [Physical Cluster Replication Monitoring](/docs/v23.2/physical-cluster-replication-monitoring)
- [Physical Cluster Replication Overview](/docs/v23.2/physical-cluster-replication-overview)
- [Set Up Physical Cluster Replication](/docs/v23.2/set-up-physical-cluster-replication)
